--- a/public/css/home.css
+++ b/public/css/home.css
@@ -94,9 +94,9 @@ h3 {
 }
 
 .flip-card-front img {
-  padding-top: 2rem;
-  width: 300px;
-  height: 300px;
+  padding-top: 1rem;
+  width: 100%;
+  height: 90%;
 }
 
 li {
