--- a/views/fortniteHome.ejs
+++ b/views/fortniteHome.ejs
@@ -71,7 +71,7 @@
           </div>
         </div>
         <section class="choiceIndex">
-          <form action="/avatar" method="post" name="avatar">
+          <form action="/fortnitehome/avatar" method="post" name="avatar">
             <input type="hidden" name="id" value="<%= i %>">
             <input type="hidden" name="avatarImage" value="<%= avatarImage[i].images %>">
             <button class="choiceIndexButton1" type="submit">Avatar</button>
