--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -17,7 +17,11 @@
 <body>
 
   <section class="avatarPic">
-    <img src="../images/vraagteken.png" />
+    <% if (avatarDb) { %>
+      <img src="<%= avatarDb %>" />
+    <% } else { %>
+      <img src="../images/vraagteken.png" />
+    <% } %>
   </section>
   <nav>
     <ul>
