--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,22 +26,24 @@
       <li><a href="/blacklist">Blacklists</a></li>
       <li><a href="/login">Login</a></li>
     </ul>
-  </nav>  <div class="login-page">
+  </nav>
+  <div class="login-page">
     <div class="form">
-      <form action="/login" class="login-form"  method="post">
-        <input type="text" name="fname" placeholder="username"/>
-        <input type="password" name="lname" placeholder="password"/>
-      <button>login</button>
+      <form action="/login" class="login-form" method="post">
+        <input type="text" name="fname" placeholder="username" />
+        <input type="password" name="lname" placeholder="password" />
+        <button>login</button>
       </form>
     </div>
   </div>
   <footer>
     <section>
-        <h2>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h2>
+      <h2>Copyright &copy;MSI - Ramazan Sofyan Dachi Rachad</h2>
     </section>
     <section>
-        <img src="../images/ap.png">
+      <img src="../images/ap.png">
     </section>
-</footer></body>
+  </footer>
+</body>
 
 </html>
