--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,7 +29,7 @@
       <form action="/register" class="login-form" method="post">
         <input type="text" name="name" placeholder="username" />
         <input type="password" name="password" placeholder="password" />
-        <button>login</button>
+        <button>Register</button>
       </form>
     </div>
   </div>
