hele navigation aangepast en hamburger menu gemaakt voor mobile

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Please contact rachad, you did somthing wrong</h1>
+  <h1>Please contact us, you did somthing wrong</h1>
 </body>
 
 </html>
