--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,11 +17,16 @@
   <section class="avatarPic">
     <img src="../images/vraagteken.png" />
   </section>
-  <nav>
-    <ul>
-      <li class="browser"><a href="/">Landing Page</a></li>
-      <li class="ipad"><a href="/">&#8592;</a></li>
-      <li><a href="/login">Login</a></li>
+  <input class="inputheader" type="checkbox" id="toggle">
+  <nav id="navregister">
+    <label class="navbar-toggler" for="toggle">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </label>
+    <ul class="nav-list" id="navlistregister">
+      <li class="nav-item"><a class="nav-link" href="/">Landing Page</a></li>
+      <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
     </ul>
   </nav>
   <div class="login-page">
