--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,5 +1,15 @@
-/*HEADER*/
-/*LOGO*/
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+}
+.username{
+  color: white;
+}
 .avatarPic{
   text-align: center;
 }
@@ -7,84 +17,133 @@
   height: 100px;
   width: 100px;
 }
-/*MENU*/
-.browser{
-  display: contents;
-}
-.ipad{
-  display: none;
-}
 nav {
-  background-color: rgb(58, 58, 58);
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border-radius: 25px;
-}
-
-nav ul {
-  
-  list-style-type: none;
-  gap: 50px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
+  padding: 20px;
+  height: 75px;
+  line-height: 75px;
+  background: #404040;
+
 }
 
-nav li a {
-  color: white;
-  text-decoration: none;
-  font-size: 2rem;
+
+nav .nav-list {
+  display: flex;
 }
 
-nav li a:hover {
-  color: #6fb1fc;
+nav .nav-list .nav-item {
+  cursor: pointer;
+  height: 100%;
+  padding: 0 30px;
 }
 
-nav li a:active {
-  color: #03428b;
+nav .nav-list .nav-item:hover {
+  background-color: #6fb1fc;
+  transition: .4s;
+
 }
 
-/*RESPONSIVE MENU*/
-
-/*IPAD*/
-@media only screen and (max-width: 820px) {
-  .browser{
-    display: none;
-  }
-  .ipad{
-    display: contents;
-  }
+nav .nav-list .nav-link {
+  color: #f1f1f1;
+  font-size: 18px;
+  font-weight: 500;
 }
 
-/*GSM*/
-@media only screen and (max-width: 675px) {
+@media (max-width: 935px) {
+
   nav {
-    background-color: rgb(58, 58, 58);
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 25px;
+      padding: 0 2rem;
   }
-  
-  nav ul {
-    list-style-type: none;
-    gap: 10px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    text-align: center;
+
+  nav .nav-list .nav-item {
+      padding: 0 20px;
   }
-  .browser{
-    display: contents;
+
+}
+
+@media (max-width: 675px) {
+  nav{
+    justify-content: space-between;
   }
-  .ipad{
-    display: none;
+  nav .nav-list {
+      display: grid;
+      position: absolute;
+      background: #404040;
+      width: 100%;
+      top: 75px;
+      left: 0;
+      transform: translateY(-300%);
+      z-index: -1;
+      margin-top: 50px;
+  }
+
+  nav .nav-list .nav-item {
+      padding-left: 35px;
+  }
+
+  nav .navbar-toggler {
+      display: grid !important;
   }
   .avatarPic img{
-    height: 50px;
-    width: 50px;
+    height: 70px;
+    width: 70px;
+  }
+  nav .navbar-toggler {
+    display: none;
+    height: min-content;
+    margin: 18px -10px 0 0;
+    cursor: pointer;
   }
   
+  nav .navbar-toggler .bar {
+    width: 40px;
+    height: 5px;
+    margin-bottom: 10px;
+    background: #ffffff;
+    border-radius: 10%;
+    transition: .4s;
+  }
+  
+  
+  .inputheader:checked ~ nav {
+    margin-bottom: 350px;
+  }
+  .inputheader:checked ~ #navlogin {
+    margin-bottom: 100px;
+  }
+  .inputheader:checked ~ #navregister {
+    margin-bottom: 180px;
+  }
+  
+  .inputheader:checked ~ nav .nav-list {
+    transform: translateY(0);
+    z-index: 1;
+    margin-top: 89px;
+  }
+  .inputheader:checked ~ nav #navlistregister,#navlistlogin{
+    margin-top: 70px;
+  }
+  
+  .inputheader:checked ~ nav .navbar-toggler {
+    margin-top: 35px;
+  }
+  
+  .inputheader:checked ~ nav .navbar-toggler .bar:nth-child(1) {
+    position: absolute;
+    transform: rotate(45deg);
+  }
+  
+  .inputheader:checked ~ nav .navbar-toggler .bar:nth-child(2) {
+    display: none;
+  }
+  
+  .inputheader:checked ~ nav .navbar-toggler .bar:nth-child(3) {
+    transform: rotate(-45deg);
+  }
+
 }
 
+.inputheader {
+  display: none;
+}
