--- a/public/css/home.css
+++ b/public/css/home.css
@@ -128,6 +128,9 @@ li {
   font-size: 1.7rem;
   background-color: #6fb1fc;
   border-radius: 10px;
+  padding: 2px;
+  margin-left: 2px;
+  margin-right: 2px;
 }
 
 .choiceIndexButton3 {
