--- a/views/favoriet.ejs
+++ b/views/favoriet.ejs
@@ -21,6 +21,9 @@
       <img src="<%= avatarDb %>" />
       <% } else { %>
         <img src="../images/vraagteken.png" />
+        <h1>
+          <%=username%>
+        </h1>
         <% } %>
   </section>
   <nav>
